--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "This README would normally document whatever steps are necessary to get your application up and running.",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "nodemon src/index.js"
 	},
 	"repository": {
 		"type": "git",
@@ -20,6 +20,10 @@
 		"nodemon": "^2.0.14"
 	},
 	"dependencies": {
-		"express": "^4.17.1"
+		"cors": "^2.8.5",
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^6.0.12"
 	}
 }
