--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "This README would normally document whatever steps are necessary to get your application up and running.",
 	"main": "index.js",
 	"scripts": {
-		"test": "nodemon src/index.js"
+		"dev": "nodemon src/index.js",
+		"debug": "nodemon --inspect src/index.js"
 	},
 	"repository": {
 		"type": "git",
