--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "nodemon index.js",
-		"debug": "nodemon --inspect index.js"
+		"debug": "nodemon --inspect index.js",
+		"lint": "./node_modules/.bin/eslint"
 	},
 	"repository": {
 		"type": "git",
