--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,11 @@
 {
-	"singleQuote": true,
-	"arrowParens": "avoid",
-	"tabWidth": 2,
-	"bracketSpacing": true,
+	"trailingComma": "es5",
 	"printWidth": 180,
+	"semi": true,
+	"singleQuote": true,
+	"tabWidth": 2,
+	"arrowParens": "avoid",
+	"bracketSpacing": true,
 	"useTabs": true,
-	"formatOnSave": true,
-	"jsxSingleQuote": true,
-	"trailingComma": "all",
-	"semi": true
+	"formatOnSave": true
 }
