--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"dev": "nodemon index.js",
 		"debug": "nodemon --inspect index.js",
-		"lint": "./node_modules/.bin/eslint"
+		"lint": "./node_modules/.bin/eslint",
+		"lintfix": "eslint src --fix --cache"
 	},
 	"repository": {
 		"type": "git",
@@ -21,6 +22,7 @@
 	"devDependencies": {
 		"eslint": "^8.2.0",
 		"eslint-config-airbnb": "^19.0.0",
+		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-import": "^2.25.3",
