--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,22 @@
 {
-	"extends": ["airbnb", "prettier", "plugin:node/recommended"],
+	"env": {
+		"browser": true,
+		"commonjs": true,
+		"es2021": true
+	},
 	"plugins": ["prettier"],
+	"extends": ["airbnb-base", "airbnb", "prettier", "plugin:node/recommended"],
+	"parserOptions": {
+		"ecmaVersion": 2021
+	},
 	"rules": {
 		"prettier/prettier": "error",
-		"no-console": 2,
+		"no-unused-vars": "off",
+		"no-console": "off",
 		"func-names": "off",
 		"no-process-exit": "off",
 		"object-shorthand": "off",
-		"class-methods-use-this": "off"
+		"class-methods-use-this": "off",
+		"no-shadow": "off"
 	}
 }
