--- a/.eslintrc
+++ b/.eslintrc
@@ -2,10 +2,11 @@
 	"env": {
 		"browser": true,
 		"commonjs": true,
-		"es2021": true
+		"es2021": true,
+		"es6": true
 	},
 	"plugins": ["prettier"],
-	"extends": ["airbnb-base", "airbnb", "prettier", "plugin:node/recommended"],
+	"extends": ["airbnb-base", "airbnb", "plugin:node/recommended"],
 	"parserOptions": {
 		"ecmaVersion": 2021
 	},
@@ -17,6 +18,8 @@
 		"no-process-exit": "off",
 		"object-shorthand": "off",
 		"class-methods-use-this": "off",
-		"no-shadow": "off"
+		"no-shadow": "off",
+		"arrow-parens": ["error", "as-needed"],
+		"allowIndentationTabs": true
 	}
 }
