--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,8 @@
 {
-	"trailingComma": "es5",
-	"printWidth": 180,
 	"semi": true,
+	"trailingComma": "all",
 	"singleQuote": true,
+	"printWidth": 120,
 	"tabWidth": 2,
-	"arrowParens": "avoid",
-	"bracketSpacing": true,
-	"useTabs": true,
-	"formatOnSave": true
+	"arrowParens": "avoid"
 }
