finish the config of TS-backend

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 MONGODB_URI='mongodb+srv://devils:devils@crmsystem.aayyo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
-DB_NAME="crmDB"
-PRODUCT_COLLECTION_NAME="product"
+DB_NAME="CRMsystemDB"
 
 PORT=3000
