--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
 DB_HOST=localhost
-DB_PORT=27017,
-DB_DATABASE="devils-crm",
+DB_PORT=27017
+DB_DATABASE=devils-crm
 
 
 
-DB_USER="devils",
+DB_USER=devils
 
-DB_PASSWORD="devils",
+DB_PASSWORD=devils
 
-NODE_ENV="development",
+NODE_ENV=development
 
 
-MONGODB_URI='mongodb+srv://devils:devils@crmsystem.aayyo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority',
+MONGODB_URI=mongodb+srv://devils:devils@crmsystem.aayyo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
-DB_NAME="CRMsystemDB",
+DB_NAME=CRMsystemDB
 
 PORT=3000
