--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,30 @@
 {
-  "semi": true,
-  "trailingComma": "all",
-  "singleQuote": true,
+  "bracketSpacing": true,
   "printWidth": 120,
+  "proseWrap": "preserve",
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "all",
   "tabWidth": 2,
-  "arrowParens": "avoid"
+  "useTabs": true,
+  "parser": "typescript",
+  "arrowParens": "always",
+  "requirePragma": true,
+  "insertPragma": true,
+  "endOfLine": "lf",
+  "overrides": [
+    {
+      "files": "*.json",
+      "options": {
+        "singleQuote": false
+      }
+    },
+    {
+      "files": ".*rc",
+      "options": {
+        "singleQuote": false,
+        "parser": "json"
+      }
+    }
+  ]
 }
