--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon",
     "inspect": "nodemon --inspect src/index.ts",
-    "lint": "npm run lint:js ",
+    "lint": "eslint src/**/*.ts",
     "lint:eslint": "eslint --ignore-path .gitignore --ext .ts",
-    "lint:js": "npm run lint:eslint src/",
-    "lint:fix": "npm run lint:js -- --fix"
+    "lint:fix": "eslint --fix src/**/*.ts"
   },
   "keywords": [],
   "author": "",
@@ -30,16 +29,20 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.9",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
+    "eslint-config-airbnb": "^19.0.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
     "jest": "^27.3.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.4.1",
