--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,9 @@
 {
 	"env": {
 		"browser": true,
-		"commonjs": true,
 		"es2021": true,
-		"es6": true
+		"es6": true,
+		"node": true
 	},
 	"plugins": ["prettier"],
 	"parser": "@typescript-eslint/parser",
@@ -31,6 +31,7 @@
 		"no-shadow": "off",
 		"arrow-parens": ["error", "as-needed"],
 		"allowIndentationTabs": "off",
+		"allowKeywords": "off",
 		"import/extensions": [
 			"error",
 			"ignorePackages",
