--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^16.11.9",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
