--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
     "assertion-error": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
