--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon",
+    "start:prod": "NODE_ENV=production && npm start",
     "inspect": "nodemon --inspect src/index.ts",
     "lint": "eslint src/**/*.ts",
     "lint:eslint": "eslint --ignore-path .gitignore --ext .ts",
@@ -37,6 +38,7 @@
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.3.0",
     "eslint-config-airbnb": "^19.0.1",
     "eslint-config-airbnb-base": "^15.0.0",
