--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,31 +3,26 @@
     "lib": ["es2018"],
     "rootDirs": ["tests", "src"],
     "target": "es2018",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "outDir": "./build",
-    "skipLibCheck": true,
-    "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "module": "commonjs",
+    "pretty": true,
     "sourceMap": true,
+    "outDir": "./build",
+    "allowJs": true,
+    "noEmit": false,
+    "esModuleInterop": true,
     "baseUrl": ".",
-       "paths": {
-           "*": [
-               "node_modules/*",
-               "tests/*",
-           ]
-     }
+    "paths": {"*": ["node_modules/*","tests/*",]}
   },
   "include": [
-    "src/**/*.ts",
-    ".env",
-    ".env.*",
-    "tests/**/*.ts",
-    "index.js",
-    "jest.config.js",
-    "config/*.config.js" // for *.config.js files
+    "./src/**/*"
   ],
   "exclude": [
     "node_modules",
+    "tests"
   ]
 }
