--- a/.prettierignore
+++ b/.prettierignore
@@ -1,10 +1,7 @@
+# Node artifact files
+node_modules/
+dist/
+
 # Ignore artifacts:
 build
-dist
 coverage
-
-# Ignore all HTML files:
-*.html
-
-.gitignore
-.prettierignore
