--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,13 @@
 {
   "compilerOptions": {
-    "lib": ["es2018"],
-    "rootDirs": ["tests", "src"],
-    "target": "es2018",
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
+    "target": "ES2020",
     "module": "commonjs",
-    "pretty": true,
-    "sourceMap": true,
-    "outDir": "./build",
-    "allowJs": true,
-    "noEmit": false,
+    "rootDir": "src",
+    "outDir": "dist",
     "esModuleInterop": true,
-    "baseUrl": ".",
-    "paths": {"*": ["node_modules/*","tests/*",]}
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
   },
-  "include": [
-    "./src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "tests"
-  ]
+  "include": ["src/"]
 }
