--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
     "@typescript-eslint/no-shadow": ["error"],
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "error",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "no-console": "error"
   }
 }
