--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc -p .",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "npm run lint -- --fix"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown",
