--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "error",
     "no-underscore-dangle": "off",
-    "no-console": "error"
+    "no-console": "error",
+    "import/no-import-module-exports": "off"
   }
 }
