--- a/.eslintrc
+++ b/.eslintrc
@@ -37,6 +37,7 @@
     "@typescript-eslint/no-unused-vars": "error",
     "no-underscore-dangle": "off",
     "no-console": "error",
-    "import/no-import-module-exports": "off"
+    "import/no-import-module-exports": "off",
+    "prefer-destructuring": ["error", { "object": true, "array": false }]
   }
 }
