--- a/.eslintrc
+++ b/.eslintrc
@@ -13,9 +13,21 @@
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true,
+        "project": "./tsconfig.json"
+      }
+    }
+  },
   "parserOptions": {
     "ecmaVersion": 12,
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
   "plugins": ["@typescript-eslint", "import"],
   "rules": {
@@ -38,6 +50,7 @@
     "no-underscore-dangle": "off",
     "no-console": "error",
     "import/no-import-module-exports": "off",
-    "prefer-destructuring": ["error", { "object": true, "array": false }]
+    "prefer-destructuring": ["error", { "object": true, "array": false }],
+    "import/no-unresolved": "off"
   }
 }
