--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,9 @@
       "typescript": {
         "alwaysTryTypes": true,
         "project": "./tsconfig.json"
+      },
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx", ".d.ts"]
       }
     }
   },
@@ -40,7 +43,8 @@
         "js": "never",
         "jsx": "never",
         "ts": "never",
-        "tsx": "never"
+        "tsx": "never",
+        "d.ts": "never"
       }
     ],
     "no-shadow": "off",
