--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "debug": "^4.3.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "helmet": "^4.6.0",
     "http-errors": "^1.8.1",
     "joi": "^17.4.2",
