--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "pm2 start dist/index.js --name DevilsCRM",
+    "poststart": "pm2 log DevilsCRM",
+    "stop": "pm2 stop DevilsCRM",
     "dev": "nodemon src/index.ts",
+    "debug": "nodemon --inspect src/index.ts",
     "build": "tsc -p .",
     "test": "jest",
     "lint": "eslint src --ext .ts",
@@ -45,6 +48,7 @@
     "mongodb": "^4.2.0",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
+    "pm2": "^5.1.2",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2",
@@ -84,6 +88,7 @@
     "supertest": "^6.1.6",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.2"
   }
 }
