--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
     "lodash": "^4.17.21",
     "mongodb": "^4.2.0",
     "mongoose": "^6.0.14",
+    "mongoose-schematype-uuid": "^1.1.4",
     "morgan": "^1.10.0",
+    "node-uuid": "^1.4.8",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2",
+    "uuid-mongodb": "^2.4.5",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -62,6 +65,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.9",
+    "@types/node-uuid": "^0.0.29",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.3",
     "@types/winston": "^2.4.4",
