--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,13 @@
     "baseUrl": "./",
     "paths": {
       "*": ["node_modules/*"],
-      "models/*": ["src/models/*"],
-      "middleware/*": ["src/middleware/*"],
-      "routes/*": ["src/routes/*"],
-      "utils/*": ["src/utils/*"],
-      "controllers/*": ["src/controllers/*"],
-      "config/*": ["src/config/*"],
-      "database/*": ["src/database/*"]
+      "@models/*": ["src/models/*"],
+      "@middleware/*": ["src/middleware/*"],
+      "@routes/*": ["src/routes/*"],
+      "@utils/*": ["src/utils/*"],
+      "@controllers/*": ["src/controllers/*"],
+      "@config/*": ["src/config/*"],
+      "@database/*": ["src/database/*"]
     },
     "strict": true,
     "skipLibCheck": true,
