--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,11 @@
     "baseUrl": "./",
     "paths": {
       "*": ["node_modules/*"],
-      "models/*": ["src/models/*"],
+      "@models/*": ["src/models/*"],
       "middleware/*": ["src/middleware/*"],
-      "routes/*": ["src/routes/*"],
+      "@routes/*": ["src/routes/*"],
       "utils/*": ["src/utils/*"],
-      "controllers/*": ["src/controllers/*"],
+      "@controllers/*": ["src/controllers/*"],
       "config/*": ["src/config/*"],
       "database/*": ["src/database/*"]
     },
