--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "pm2 start dist/index.js --name DevilsCRM",
-    "poststart": "pm2 log DevilsCRM",
-    "stop": "pm2 stop DevilsCRM",
+    "start": "ts-node -r tsconfig-paths/register --files dist/index.js ",
     "dev": "nodemon src/index.ts",
     "debug": "nodemon --inspect src/index.ts",
     "build": "tsc -p .",
