--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "types": ["node"],
     "baseUrl": "./",
     "paths": {
-      "*": ["node_modules/*"],
+      "*": ["node_modules/*", "src/types/*"],
+      "@types/*": ["src/types/*"],
       "@models/*": ["src/models/*"],
       "@middleware/*": ["src/middleware/*"],
       "@routes/*": ["src/routes/*"],
@@ -18,10 +19,11 @@
       "@config/*": ["src/config/*"],
       "@database/*": ["src/database/*"]
     },
-    "strict": true,
+    "strict": false,
     "skipLibCheck": true,
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
-  "include": ["src/"],
+  "typeRoots": ["./src/@types", "./custom_typings", "./@types", "./node_modules/@types"],
+  "include": ["./src"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
