--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
       "@config/*": ["src/config/*"],
       "@database/*": ["src/database/*"]
     },
-    "strict": false,
+    "strict": true,
     "skipLibCheck": true,
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
