--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "skipLibCheck": true,
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
-  "typeRoots": ["./src/@types", "./custom_typings", "./@types", "./node_modules/@types"],
   "include": ["./src"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts"],
+  "files": ["./src/types/types.d.ts"]
 }
