--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "pm2 start ecosystem.yml",
+    "start": "pm2 start ecosystem.yml --only DevilsCRM",
     "poststart": "pm2 log DevilsCRM",
     "stop": "pm2 stop DevilsCRM",
     "dev": "nodemon src/index.ts",
