--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,5 @@
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
   "include": ["./src"],
-  "exclude": ["node_modules", "**/*.spec.ts"],
-  "files": ["./src/types/types.d.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
