--- a/ecosystem.yml
+++ b/ecosystem.yml
@@ -1,6 +1,6 @@
 apps:
   - name: 'DevilsCRM'
-    script: 'dist/index.js'
+    script: './src/index.ts'
     node_args: '-r ts-node/register -r tsconfig-paths/register'
     kill_timeout: 10000
 
