--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "pm2 start ecosystem.yml --only DevilsCRM",
-    "poststart": "pm2 log DevilsCRM",
+    "start": "ts-node -r tsconfig-paths/register dist/index.js ",
+    "start:pm2": "pm2 start ecosystem.yml --only DevilsCRM",
+    "poststart:pm2": "pm2 log DevilsCRM",
     "stop": "pm2 stop DevilsCRM",
     "dev": "nodemon src/index.ts",
     "debug": "nodemon --inspect src/index.ts",
