--- a/ecosystem.yml
+++ b/ecosystem.yml
@@ -3,7 +3,7 @@ apps:
     script: './src/index.ts'
     node_args: '-r ts-node/register -r tsconfig-paths/register'
     kill_timeout: 10000
-
+    watch: true
     exec_mode: cluster
     env:
       NODE_ENV: development
