fix: remove the .env

--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,9 @@ DB_NAME=CRMsystemDB
 
 DB_USER=
 DB_PASSWORD=
-DB_HOST=devils-crm.8y5vc.mongodb.net
-DE_HOST_UAT=devilscrm-uat.yqzp1.mongodb.net
-DB_DATABASE=myFirstDatabase?retryWrites=true&w=majority
+DB_HOST=
+DE_HOST_UAT=
+DB_DATABASE=
 
 PORT=3000
 
