--- a/.env.example
+++ b/.env.example
@@ -18,9 +18,9 @@ JWT_SECRET=
 JWT_EXPIRES_IN=1d
 
 SENDGRID_API_KEY=
-SENDER_EMAIL=devilscrmpro@gmail.com
+SENDER_EMAIL=
 
-AWS_BUCKET_NAME=devils-crm-upload-img
-AWS_REGION=ap-southeast-2
+AWS_BUCKET_NAME=
+AWS_REGION=
 AWS_ACCESS_KEY=
 AWS_SECRET_KEY=
